# InternshipProject

AutonomousParkingAssistant/: CMakeLists.txt  DOCUMENTATION.md  README.md  build.bat  build.sh
AutonomousParkingAssistant/include/: ParkingUtils.h  SensorData.h
AutonomousParkingAssistant/src/: ParkingAssistant.cpp  ParkingUtils.cpp  main.cpp
AutonomousParkingAssistant/tests/: testParkingUtils.cpp
